fix banner width on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -1165,7 +1165,7 @@ div[data-poll-type="number"] ul {
   }
   .banner-block {
     padding: 30px 0 !important;
-    width: 90% !important;
+    width: 100% !important;
     margin: 30px auto !important;
   }
 
@@ -1194,7 +1194,7 @@ div[data-poll-type="number"] ul {
 
   #list-area .topic-list-item.right-column,
   #list-area .topic-list-item.left-column {
-    width: calc(100% - 7px)!important;
+    width: 100%!important;
     margin-left: 0!important;
     margin-top: 0!important;
   }
